src/objects/Loyalty_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Card</relationshipLabel>
        <relationshipName>Loyalty_Card</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConsentOfOverseasTransferOfPersonalInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentOfOverseasTransferOfPersonalInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentOfTransmissionOfAdvertisingInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentOfTransmissionOfAdvertisingInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentToCollectionAndUseOfPersonalInfo1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentToCollectionAndUseOfPersonalInfo1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentToCollectionAndUseOfPersonalInfo2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentToCollectionAndUseOfPersonalInfo2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentToProvisionOfPersonalInfo3dParty1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentToProvisionOfPersonalInfo3dParty1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentToProvisionOfPersonalInfo3dParty2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentToProvisionOfPersonalInfo3dParty2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_Consignment_of_Personal_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to Consignment of Personal Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentPoints__c</fullName>
        <label>CurrentPoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerLease__c</fullName>
        <label>CustomerLease</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>Hobby</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Sports (Swim/Health/Tennis)</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Well-Being</fullName>
                </value>
                <value>
                    <fullName>Wine/Cuisine</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Concerts/Exhibition</fullName>
                </value>
                <value>
                    <fullName>Movies/Plays</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Beauty/Skincare</fullName>
                </value>
                <value>
                    <fullName>Childcare</fullName>
                </value>
                <value>
                    <fullName>Health Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Makeup Class</fullName>
                </value>
                <value>
                    <fullName>Golf Lesson</fullName>
                </value>
                <value>
                    <fullName>Golf Competition</fullName>
                </value>
                <value>
                    <fullName>Concert/Event</fullName>
                </value>
                <value>
                    <fullName>New Launch Event</fullName>
                </value>
                <value>
                    <fullName>Test Drive Promotion</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Fashion/Accessories Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medicine</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>ComputerIT</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Broadcasting, Media</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Card_End_Date__c</fullName>
        <label>LoyaltyCardEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loyalty_Card_Number__c</fullName>
        <externalId>true</externalId>
        <label>Loyalty Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Card_Start_Date__c</fullName>
        <label>LoyaltyCardStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magazine_Shipment__c</fullName>
        <label>Magazine Shipment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailShip__c</fullName>
        <label>MailShip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Publicity_Processing_Purpose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Publicity Processing Purpose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marriage_Status__c</fullName>
        <label>Marriage Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Hobby__c</fullName>
        <label>Other Hobby</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_magazine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred magazine</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Loyalty_Dummy_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loyalty Dummy Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalPoints__c</fullName>
        <label>TotalPoints</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Loyalty Card</relationshipLabel>
        <relationshipName>Loyalty_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>owner_relation__c</fullName>
        <label>Owner Relation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Grand Child</fullName>
                </value>
                <value>
                    <fullName>Husband Wife</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loyalty Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Loyalty_Card_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Loyalty_Card_Start_Date__c</columns>
        <columns>Loyalty_Card_End_Date__c</columns>
        <columns>Vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LC-{0000000000}</displayFormat>
        <label>Loyalty Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Card</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>